After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701346 - GtkHeaderBar: Fix buildable function names
GtkHeaderBar: Fix buildable function names
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-05-31 11:43 UTC by Bastien Nocera
Modified: 2013-06-14 17:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkHeaderBar: Fix buildable function names (2.06 KB, patch)
2013-05-31 11:43 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-05-31 11:43:32 UTC
No functional changes
Comment 1 Bastien Nocera 2013-05-31 11:43:35 UTC
Created attachment 245718 [details] [review]
GtkHeaderBar: Fix buildable function names

It's a GtkHeaderBar, not GtkHeader.
Comment 2 Bastien Nocera 2013-06-14 17:11:16 UTC
Attachment 245718 [details] pushed as 19c5b37 - GtkHeaderBar: Fix buildable function names